test/e2e/chainsaw/gateway/udproute-onprem/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name)
  namespace: ($gateway_namespace)
spec:
  gatewayClassName: (join('-', [($test_name), 'gateway-class']))
  listeners:
    - name: udp
      protocol: UDP
      port: (to_number($listener_udp_port))
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
    - name: udp-extra
      protocol: UDP
      port: (to_number($listener_udp_extra_port))
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: UDPRoute
