test/e2e/chainsaw/gateway/udproute-onprem/03-udproute.yaml
---
# UDP echo backend for the older (winner) UDPRoute. kong/go-echo replies
# with "Running on Pod <POD_NAME>." on any UDP packet, letting us verify
# which backend the Kong listener actually forwards to.
apiVersion: v1
kind: Service
metadata:
  name: ($echo_older_name)
  namespace: ($gateway_namespace)
spec:
  selector:
    app: ($echo_older_name)
  ports:
    - name: udp
      protocol: UDP
      port: (to_number($echo_pod_port))
      targetPort: (to_number($echo_pod_port))
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ($echo_older_name)
  namespace: ($gateway_namespace)
  labels:
    app: ($echo_older_name)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ($echo_older_name)
  template:
    metadata:
      labels:
        app: ($echo_older_name)
    spec:
      containers:
        - name: echo
          image: ($echo_image)
          env:
            - name: POD_NAME
              value: ($echo_older_name)
          ports:
            - containerPort: (to_number($echo_pod_port))
              protocol: UDP
              name: udp
---
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: ($udp_route_name)
  namespace: ($gateway_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
      sectionName: udp
  rules:
    - backendRefs:
        - name: ($echo_older_name)
          port: (to_number($echo_pod_port))
